# TCOS

./: 0001-add-mutual-att.patch  README.md
docs/: SDK拆分方案.md  TCOS-mutual-att.md  TCOS设-双向认证.md  TrustedChain.drawio  TrustedChain.vsdx  XuperData-TCOS.md  app.yaml  endorser-svc.yaml  endorser.yaml  endorser2.yaml  job.yaml  job2.yaml  xuper-rust-sdk-design.md  超级链SDK结构.md
mutual-att/: Makefile  build.sh
mutual-att/app/src/: main.rs
mutual-att/enclave/: Cargo.toml  Enclave.edl
mutual-att/enclave/src/: lib.rs
trusted-mesatee-sdk/mesatee_core/: Cargo.toml
trusted-mesatee-sdk/mesatee_core/src/rpc/sgx/: .client.rs.swp  client.rs
trusted-mesatee-sdk/mesatee_sdk/: Cargo.toml
trusted-mesatee-sdk/mesatee_sdk/src/: lib.rs
trusted-mesatee-sdk/mesatee_services/fns/client/: Cargo.toml
trusted-mesatee-sdk/mesatee_services/fns/proto/: Cargo.toml
trusted-mesatee-sdk/teaclave_attestation/: Cargo.toml
trusted-mesatee-sdk/teaclave_attestation/src/: key.rs  lib.rs  report.rs
trusted-mesatee-sdk/teaclave_config/: Cargo.toml
trusted-mesatee-sdk/teaclave_utils/: Cargo.toml
xuper-rust-sdk/: Cargo.toml  build.rs  readme.md
xuper-rust-sdk/conf/: sdk.yaml
xuper-rust-sdk/key/: private.key  public.key
xuper-rust-sdk/src/: config.rs  consts.rs  contract.rs  errors.rs  lib.rs  rpc.rs  transfer.rs  wallet.rs
xuper-rust-sdk/src/protos/: chainedbft.rs  mod.rs  readme.md  xchain.proto  xchain.rs  xchain_grpc.rs  xendorser.proto  xendorser.rs  xendorser_grpc.rs
xuper-rust-sdk/src/xchain/: contract.rs  transfer.rs
