[package]
name = "xuper-rust-sdk"
version = "0.1.0"
authors = ["duanbing <hibduan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf         = "2"
futures          = "0.3.*"
xchain_crypto    = { git = "github.com/duanbing/xchain-rust-crypto" }
serde            = {  version = "1.0.104", features = ["derive"]}
serde_derive     = "1.0.104"
serde_json       = "1.0.40"
protoc-rust-grpc = "0.8.0"
num-bigint       = { version = "0.2.3", features = ["serde"] }
serde_yaml       = "0.8"
hex = "0.4.0"


[build-dependencies]
protoc-rust-grpc = "0.8.0"

