[package]
name = "xuper-rust-sdk"
version = "0.1.0"
authors = ["duanbing <duanbing@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xchain_crypto    = { git = "https://github.com/duanbing/xchain-rust-crypto", tag = "v0.5.0", package = "xchain-rust-crypto" }
#xchain_crypto    = { path = "../../xchain-rust-crypto", package = "xchain-rust-crypto" }
serde            = {  version = "1.0.104", features = ["derive"]}
serde_repr       = "0.1"
serde_derive     = "1.0.104"
serde_json       = "1.0.40"
num-bigint       = { version = "0.2.3", features = ["serde"] }
num-traits       = "0.2.10"
serde_yaml       = "0.8"
hex              = "0.4.0"
lazy_static      = "1.1.1"
base64           = "0.12.1"
grpc             = "0.8.0"
protobuf         = { version = "2.14.0", features = ["with-serde"] }
futures          = "~0.3"
rand             = "0.7.3"
rand_core        = "0.5.1"
grpc-protobuf    = "0.8.0"


[build-dependencies]
protoc-rust      = "2.14.0"
protoc-rust-grpc = "0.8.0"

[features]
default = ["with-serde"]
with-serde = []
