[package]
name = "mesatee_core"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Core of MesaTEE, including IPC/RPC/Error-handling/Database/etc. -- everything you need to develop a TEE services and clients"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "mesatee_core"
path = "src/lib.rs"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "sgx_tcrypto", "sgx_rand", "sgx_tse", "ipc", "teaclave_config/mesalock_sgx", "teaclave_utils/mesalock_sgx", "teaclave_attestation/mesalock_sgx"]
ipc = []

[dependencies]
#cfg-if       = { version = "0.1.9" }
#env_logger   = { version = "0.7.1" }
#lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }
#log          = { version = "0.4.6" }
#rustls       = { version = "0.16.0", features = ["dangerous_configuration"] }
#serde        = { version = "1.0.92" }
#serde_derive = { version = "1.0.92" }
#serde_json   = { version = "1.0.39" }
#chrono       = { version = "0.4.6" }
#ring         = { version = "0.16.5" }
#webpki       = { version = "0.21.0" }
#webpki-roots = { version = "0.19.0" }
#base64       = { version = "0.10.1" }
#yasna        = { version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }
#num-bigint   = { version = "0.2.2" }
#bit-vec      = { version = "0.6.1", default-features = false }
#httparse     = { version = "1.3.2", default-features = false }
#uuid         = { version = "0.8.1", features = ["v4"] }
#net2         = { version = "0.2.33" }
#toml         = { version = "0.5.3" }


#sgx_tstd     = { version = "1.1.0", features = ["net", "backtrace"], optional = true }
#sgx_types    = { version = "1.1.0" }
#sgx_urts     = { version = "1.1.0" }
#sgx_tcrypto  = { version = "1.1.0", optional = true }
#sgx_rand     = { version = "1.1.0", optional = true }
#sgx_tse      = { version = "1.1.0", optional = true }


cfg-if       = { version = "0.1.10" }
env_logger   = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
lazy_static  = { version = "1.0.2", features = ["spin_no_std"] }
log          = { git = "https://github.com/mesalock-linux/log-sgx" }
rustls       = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", features = ["dangerous_configuration"]}
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
chrono       = { git = "https://github.com/mesalock-linux/chrono-sgx" }
ring         = { git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5" }
webpki       = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
base64       = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
yasna        = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint      = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec      = { version = "0.6.1", default-features = false }
httparse     = { version = "1.3.2", default-features = false }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"] }
net2         = { git = "https://github.com/mesalock-linux/net2-rs-sgx" }
toml         = { git = "https://github.com/mesalock-linux/toml-rs-sgx"}


sgx_tstd     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"], optional = true}
sgx_types    = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto  = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
sgx_rand     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
sgx_tse      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}

teaclave_config = { path = "../teaclave_config" }
teaclave_utils = { path = "../teaclave_utils" }
ipc_attribute = { path = "./ipc_attribute" }
teaclave_attestation = { path = "../teaclave_attestation" }
