[package]
name = "mesatee_sdk"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Client SDK, applications can utilize it to invoke MesaTEE services."
license = "Apache-2.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "mesatee_core/mesalock_sgx"]

[dependencies]
fns_client           = { path = "../mesatee_services/fns/client" }
mesatee_core         = { path = "../mesatee_core" }
teaclave_utils       = { path = "../teaclave_utils" }
#uuid                 = { version = "0.8.1", features = ["v4"] }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"] }
sgx_tstd             = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.2",  optional = true }
