[package]
name = "teaclave_attestation"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "Teaclave Attestation"
license = "Apache-2.0"
edition = "2018"

[lib]
name = "teaclave_attestation"
path = "src/lib.rs"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "sgx_tcrypto", "sgx_rand", "sgx_tse"]

[dependencies]
#anyhow       = { version = "1.0.26" }
#base64       = { version = "0.10.1" }
#bit-vec      = { version = "0.6.1", default-features = false }
#cfg-if       = { version = "0.1.9" }
#chrono       = { version = "0.4.6" }
#httparse     = { version = "1.3.2", default-features = false }
#log          = { version = "0.4.6" }
#env_logger   = { version = "0.7.1" }
#num-bigint   = { version = "0.2.2" }
#rustls       = { version = "0.16.0", features = ["dangerous_configuration"] }
#serde_json   = { version = "1.0.39" }
#thiserror    = { version = "1.0.9" }
#uuid         = { version = "0.8.1", features = ["v4"] }
#webpki       = { version = "0.21.0" }
#webpki-roots = { version = "0.19.0" }
#yasna        = { version = "0.3.0", features = ["bit-vec", "num-bigint", "chrono"] }

#sgx_rand    = { version = "1.1.0", optional = true }
#sgx_tcrypto = { version = "1.1.0", optional = true }
#sgx_tse     = { version = "1.1.0", optional = true }
#sgx_tstd    = { version = "1.1.0", features = ["net", "backtrace"], optional = true }
#sgx_types   = { version = "1.1.0" }


anyhow       = { git = "https://github.com/mesalock-linux/anyhow-sgx" }
base64       = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
bit-vec      = { version = "0.6.1", default-features = false }
cfg-if       = { version = "0.1.10" }
chrono       = { git = "https://github.com/mesalock-linux/chrono-sgx" }
httparse     = { version = "1.3.2", default-features = false }
log          = { git = "https://github.com/mesalock-linux/log-sgx" }
env_logger   = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
num-bigint      = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
rustls       = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", features = ["dangerous_configuration"]}

serde_json   = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
thiserror    = { git = "https://github.com/mesalock-linux/thiserror-sgx" }
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx", features = ["v4"] }
webpki       = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }

sgx_rand     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tcrypto  = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tse      = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_tstd     = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git",  features = ["net", "backtrace"], optional = true}
sgx_types    = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }


teaclave_config = { path = "../teaclave_config" }
teaclave_utils  = { path = "../teaclave_utils" }
