[package]
name = "fns_proto"
version = "0.1.0"
authors = ["MesaTEE Authors <developers@mesatee.org>"]
description = "RPC protocol of FNS."
license = "Apache-2.0"
edition = "2018"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
cov = ["sgx_cov"]

[dependencies]
cfg-if       = { version = "0.1.10" }
#serde        = { version = "1.0.39" }
#serde_derive = { version = "1.0.92" }

serde           = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_derive    = { git = "https://github.com/mesalock-linux/serde-sgx" }

#sgx_cov = { version = "1.1.0", optional = true }
#sgx_tstd = { version = "1.1.0", optional = true }
sgx_cov = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}

